--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.2.0",
+    "@mui/x-charts": "^8.9.0",
+    "chart.js": "^4.5.0",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.7.1",
     "recharts": "^3.1.0"
   },
